# Wiki-Extractor

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
docs/: adaptation-from-harness-core.md  design-tokens.md
fixtures/: adaptation-log-structure-check.mjs  build-pdf-fixture.mjs  dev-fallback.flag  disclosure-phrase-matchers.json  t1-banner-audit.mjs  t1-extract-and-validate.mjs  t1-oauth-spawn.mjs  t1-slice3-smoke.mjs  t1-slice4-feedback.mjs  t1-slice4-nav.mjs  t1-slice5a-smoke.mjs  t1-slice5b-smoke.mjs  t1-slice5c-smoke.mjs  t1-slice6-smoke.mjs  t1-slice7-smoke.mjs  t1-slice8-smoke.mjs  t1-slice9-smoke.mjs  t1-static-scan.mjs
fixtures/markdown/: concept-quotation-sample.md
fixtures/plaintext/: concept-quotation-sample.txt
scripts/: resolve-msvc-linker.ps1  tier1-smoke.ps1
shared/schemas/: candidate_item.schema.json  wiki_entry.schema.json
src-tauri/: Cargo.toml  llm.config.json  tauri.conf.json
src-tauri/src/: banner_audit.rs  codex_detect.rs  codex_login.rs  dev_fallback.rs  external_dep_paths.rs  extract_cmd.rs  lib.rs  llm_cmd.rs  oauth_child.rs  portable_data_root.rs  upload_cmd.rs  wiki_cmd.rs
src/lib/: tokens.css
src/lib/auth/: devFallback.ts  state.ts  store.ts
src/lib/bridge/: evidenceLimits.ts  promptBuilder.ts  responseParser.ts  responseValidator.ts  wikiImport.ts
src/lib/candidate/: candidateEngine.ts  claimVerbs.ts  demotePatterns.ts  keywordMatch.ts  originalTerms.ts  reviewState.ts  scoringEngine.ts  structuralFilter.ts
src/lib/chunk/: chunkFromBundle.ts  chunker.ts
src/lib/components/: AuthStateIndicator.svelte  BatchBridgePanel.svelte  BridgePanel.svelte  CandidateCard.svelte  CandidateCardList.svelte  CandidateList.svelte  ClaimAnnotation.svelte  DisclosureBanner.svelte  ModeToggle.svelte  OutlineInput.svelte  UploadZone.svelte  WikiEntryEditor.svelte
src/lib/components/views/: FeedbackTab.svelte  LoginTab.svelte  MainTab.svelte  UsageTab.svelte  WikiTab.svelte
src/lib/diagnostics/: extractionReport.ts
src/lib/extract/: candidateExtractor.ts  markdownExtractor.ts  pdfExtractor.ts  plainTextExtractor.ts  textQuality.ts
src/lib/feedback/: config.ts  submit.ts
src/lib/llm/: autoExtract.ts  codexProvider.ts  llmClient.ts  modeStore.svelte.ts  offlineProvider.ts  provider.ts  registry.ts
src/lib/nav/: tabs.ts
src/lib/outline/: outlineParser.ts
src/lib/pipeline/: actions.ts  store.svelte.ts
src/lib/source/: bibliography.ts
src/lib/upload/: magicBytes.ts  sourceId.ts
src/lib/validate/: schemaCheck.ts
src/lib/wiki/: wikiBuilder.ts  wikiMarkdown.ts  wikiStore.ts  wikiTypes.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
