[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# AC-7-relaxed exemption file is the SOLE caller of dirs::home_dir.
# See src/external_dep_paths.rs for the policy gate.
dirs = "5"
once_cell = "1"
thiserror = "1"
sha2 = "0.10"
base64 = "0.22"
# Slice 3 AC-LLM-EXTRACT: outbound calls are restricted to the OpenAI OAuth
# subscription / LLM loopback endpoint only. reqwest is already resolved as a
# transitive tauri dependency (see Cargo.lock); declaring it directly with the
# `json` feature reuses that resolution. Runtime network is gated by config +
# graceful degradation — logic wiring only, real call not guaranteed.
# Loopback endpoint is plain HTTP (http://127.0.0.1:<port>/v1) so no TLS
# backend is required; `json` is the only feature we add. This matches the
# already-locked reqwest 0.13.3 resolution and avoids lockfile churn.
reqwest = { version = "0.13", default-features = false, features = ["json"] }
