[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# AC-7-relaxed exemption file is the SOLE caller of dirs::home_dir.
# See src/external_dep_paths.rs for the policy gate.
dirs = "5"
once_cell = "1"
thiserror = "1"
sha2 = "0.10"
base64 = "0.22"
# Slice 3 AC-LLM-EXTRACT: outbound calls are restricted to the OpenAI OAuth
# subscription / LLM loopback endpoint only. reqwest is already resolved as a
# transitive tauri dependency (see Cargo.lock); declaring it directly with the
# `json` feature reuses that resolution. Runtime network is gated by config +
# graceful degradation — logic wiring only, real call not guaranteed.
# Loopback endpoint is plain HTTP (http://127.0.0.1:<port>/v1) so no TLS
# backend is required; `json` is the only feature we add. This matches the
# already-locked reqwest 0.13.3 resolution and avoids lockfile churn.
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "brotli", "deflate", "zstd"] }
# Slice 5c AC-OAUTH-PROXY: the openai-oauth child is spawned via tokio's async
# process API (ima2 oauthLauncher pattern). tokio is already resolved as a
# transitive tauri dependency (Cargo.lock pins 1.52.3); declaring it directly
# only ENABLES the features we use (process spawn, async line-reader, timeout,
# select! macro) — Cargo feature unification reuses the locked version, so this
# adds no new crate to the lockfile.
tokio = { version = "1", default-features = false, features = ["process", "io-util", "time", "macros", "rt"] }
# Windows-native proxy cleanup: when this app spawns `cmd /C npx openai-oauth`,
# keep the process tree in a Job Object so closing the app also closes the
# child/descendant node processes. Existing/reused localhost proxies are not
# assigned to this job and are therefore not killed by app shutdown.
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
